force-app/main/default/objects/Account/fields/Age__c.field-meta.xml
<CustomField>
    <fullName>Age__c</fullName>
    <formula>IF(NOT(ISNULL(Onboarding_Date__c)), YEAR(TODAY()) - YEAR(Onboarding_Date__c) + if(MONTH(TODAY()) &lt;= MONTH(Onboarding_Date__c), (MONTH(TODAY())+12) - MONTH(Onboarding_Date__c), (MONTH(TODAY()) - MONTH(Onboarding_Date__c)))/12, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Age</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>