force-app/main/default/objects/Account/fields/Bank_Branch_Address__c.field-meta.xml
<CustomField>
    <fullName>Bank_Branch_Address__c</fullName>
    <label>Bank Branch Address</label>
    <type>TextArea</type>
</CustomField>