force-app/main/default/objects/Account/fields/GST_Number__c.field-meta.xml
<CustomField>
    <fullName>GST_Number__c</fullName>
    <label>GST Number</label>
    <length>15</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>