force-app/main/default/objects/Account/fields/Is_ZohoBooks_Customer__c.field-meta.xml
<CustomField>
    <fullName>Is_ZohoBooks_Customer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is ZohoBooks Customer</label>
    <type>Checkbox</type>
</CustomField>