force-app/main/default/objects/Account/fields/Onboarding_Date__c.field-meta.xml
<CustomField>
    <fullName>Onboarding_Date__c</fullName>
    <inlineHelpText>Enter the date when the MSA is signed with Customer</inlineHelpText>
    <label>Onboarding Date</label>
    <type>Date</type>
</CustomField>