force-app/main/default/objects/Account/fields/PAN_Number__c.field-meta.xml
<CustomField>
    <fullName>PAN_Number__c</fullName>
    <label>PAN Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>