force-app/main/default/objects/Account/fields/Payment_Terms_Label__c.field-meta.xml
<CustomField>
    <fullName>Payment_Terms_Label__c</fullName>
    <label>Payment Terms Label</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Due on Receipt</fullName>
                <default>true</default>
                <label>Due on Receipt</label>
            </value>
            <value>
                <fullName>Net 15</fullName>
            </value>
            <value>
                <fullName>Net 30</fullName>
            </value>
            <value>
                <fullName>Net 45</fullName>
            </value>
            <value>
                <fullName>Net 60</fullName>
            </value>
            <value>
                <fullName>Due end of the month</fullName>
            </value>
            <value>
                <fullName>Due end of next month</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>