force-app/main/default/objects/Account/fields/Payment_Terms_Value__c.field-meta.xml
<CustomField>
    <fullName>Payment_Terms_Value__c</fullName>
    <formula>IF(
    Is_ZohoBooks_Customer__c,
    IF(
        ISPICKVAL(Payment_Terms_Label__c, &apos;Net 15&apos;), 15,
        IF(
            ISPICKVAL(Payment_Terms_Label__c, &apos;Net 30&apos;), 30,
            IF(
                ISPICKVAL(Payment_Terms_Label__c, &apos;Net 45&apos;), 45,
                IF(
                    ISPICKVAL(Payment_Terms_Label__c, &apos;Net 60&apos;), 60,
                    IF(
                        ISPICKVAL(Payment_Terms_Label__c, &apos;Due on Receipt&apos;), 0,
                        IF(
                            ISPICKVAL(Payment_Terms_Label__c, &apos;Due end of the month&apos;), -2,
                            IF(
                                ISPICKVAL(Payment_Terms_Label__c, &apos;Due end of next month&apos;), -3,
                                null
                            )
                        )
                    )
                )
            )
        )
    ),
    null
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Payment Terms Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>