force-app/main/default/objects/Account/fields/Quickbook_Customer_Id__c.field-meta.xml
<CustomField>
    <fullName>Quickbook_Customer_Id__c</fullName>
    <externalId>true</externalId>
    <label>Quickbook Customer Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>