force-app/main/default/objects/Account/fields/Quickbook_Link__c.field-meta.xml
<CustomField>
    <fullName>Quickbook_Link__c</fullName>
    <formula>HYPERLINK(&quot;https://app.qbo.intuit.com/app/customerdetail?nameId=&quot; +  Quickbook_Customer_Id__c ,&quot;View&quot;, &quot;_blank&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quickbook Link</label>
    <type>Text</type>
</CustomField>